# py-simple-factory-pattern

./: README.md  environment.yml  pyproject.toml  setup.py
.github/workflows/: release_pypi.yml
simple_factory_pattern/: __init__.py  factorypattern_meta.py
tests/: test_factory_exception.py  test_factory_pattern.py
tests/res/: test_classes.py
