[tool.poetry]
name = "simple-factory-pattern"
version = "1.3.1-post.20"
description = "Simple way to prevent direct creation of an instance of a class."
readme = "README.md"
license = "GPL-3.0-only"
authors = ["Marc Ammon <marc.ammon@hotmail.de>"]
homepage = "https://github.com/mammo0/py-simple-factory-pattern"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.3.2"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
metadata = false

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
